--- a/server/pom.xml
+++ b/server/pom.xml
@@ -60,6 +60,10 @@
             <groupId>com.fanxl</groupId>
             <artifactId>order-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
