--- a/server/src/main/resources/bootstrap.yml
+++ b/server/src/main/resources/bootstrap.yml
@@ -7,6 +7,11 @@ spring:
         enabled: true
         service-id: CONFIG
       profile: dev
+    stream:
+      bindings:
+        inputMessage:
+          group: order
+          content-type: application/json
 # eureka先加载, 如果不是默认地址同时又没配置就会失败
 eureka:
   client:
