--- a/server/src/main/resources/bootstrap.yml
+++ b/server/src/main/resources/bootstrap.yml
@@ -12,6 +12,13 @@ spring:
         inputMessage:
           group: order
           content-type: application/json
+  zipkin:
+    base-url: http://192.168.99.100:9411
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1
 
 # eureka先加载, 如果不是默认地址同时又没配置就会失败
 eureka:
@@ -47,3 +54,6 @@ management:
 
 
 
+logging:
+  level:
+    org.springframework.cloud.openfeign: debug
